<resources>
    <string name="app_name">MyProject2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>


    <string name="bot_home">خانه</string>
    <string name="bot_menu">دسته بندی</string>
    <string name="bot_search">جستجو</string>
    <string name="bot_history">تاریخچه</string>
    <string name="bot_profile">پروفایل</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
