<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        android:title="@string/bot_home" />

    <item
        android:id="@+id/navigation_menu"
        android:icon="@drawable/menu"
        android:title="@string/bot_menu"
        />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/search"
        android:title="@string/bot_search" />
    <item
        android:id="@+id/navigation_history"
        android:icon="@drawable/history"
        android:title="@string/bot_history" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/user"
        android:title="@string/bot_profile" />

</menu>
